--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,11 +45,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     //api
     implementation 'com.google.code.gson:gson:2.8.7'
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 
     //database
     implementation "androidx.room:room-ktx:2.4.0-beta01"
@@ -57,6 +59,12 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.0-beta01"
     implementation "io.reactivex.rxjava3:rxkotlin:3.0.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+
+    //Dagger di
+    implementation "com.google.dagger:dagger:2.34"
+    implementation "com.google.dagger:dagger-android-support:2.34"
+    kapt "com.google.dagger:dagger-android-processor:2.34"
+    kapt "com.google.dagger:dagger-compiler:2.34"
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
